--- a/source/_includes/custom/home_landing_row.html
+++ b/source/_includes/custom/home_landing_row.html
@@ -1,6 +1,7 @@
 <div id="about-me" class="col-md-offset-3 col-md-6">
   <h4>about me</h4>
   <p>{{ site.description }}</p>
+  <p>Check out our tool @ <a href="https://vida.io">vida.io</a></p>
   <div class="social-icon-list">
   	{% if site.twitter_user %}
     <a title="Twitter" href="https://twitter.com/{{ site.twitter_user }}"><img src="/images/glyphicons_social_31_twitter.png"/></a>
